WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211911
REGRESSION (
r260717
): installmentConfiguration member is no longer available on ApplePayPaymentRequest
https://bugs.webkit.org/show_bug.cgi?id=211911
Summary
REGRESSION (r260717): installmentConfiguration member is no longer available ...
Andy Estes
Reported
2020-05-14 11:29:52 PDT
REGRESSION (
r260717
): installmentConfiguration member is no longer available on ApplePayPaymentRequest
Attachments
Patch
(20.33 KB, patch)
2020-05-14 11:32 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(20.43 KB, patch)
2020-05-14 11:35 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(21.10 KB, patch)
2020-05-15 17:22 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2020-05-14 11:32:53 PDT
Created
attachment 399385
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-05-14 11:33:16 PDT
<
rdar://problem/63236367
>
Andy Estes
Comment 3
2020-05-14 11:35:25 PDT
Created
attachment 399386
[details]
Patch
Alex Christensen
Comment 4
2020-05-14 11:55:07 PDT
Thanks, Andy!
Andy Estes
Comment 5
2020-05-14 12:05:28 PDT
Comment on
attachment 399386
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=399386&action=review
> Source/WebCore/Modules/applepay/PaymentInstallmentConfiguration.mm:46 > + NSNumberFormatter *numberFormatter = [[NSNumberFormatter alloc] init];
Wenson pointed out that this needs to be a RetainPtr. Will fix.
Andy Estes
Comment 6
2020-05-15 17:22:49 PDT
Created
attachment 399531
[details]
Patch
EWS
Comment 7
2020-05-16 12:14:02 PDT
Committed
r261785
: <
https://trac.webkit.org/changeset/261785
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399531
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug