REGRESSION (r260717): installmentConfiguration member is no longer available on ApplePayPaymentRequest https://bugs.webkit.org/show_bug.cgi?id=211911 <rdar://problem/63236367>

Reviewed by Tim Horton.

Source/WebCore:

Prior to r260717, installmentConfiguration was a member of ApplePayRequestBase, making it
available on ApplePayRequest and ApplePayPaymentRequest. In r260717, it was mistakenly
moved to ApplePayRequest.

This change moves it back to ApplePayRequestBase, adds infrastructure for regression testing
ApplePayInstallmentConfiguration, and adds a regression test.

Test: http/tests/ssl/applepay/ApplePayInstallmentConfiguration.https.html

* Modules/applepay/ApplePayInstallmentConfiguration.idl:
* Modules/applepay/ApplePayRequestBase.cpp:
(WebCore::convertAndValidate):
(WebCore::finishConverting): Deleted.
* Modules/applepay/ApplePayRequestBase.idl:
* Modules/applepay/PaymentInstallmentConfiguration.mm:
(WebCore::fromDecimalNumber):
(WebCore::applePaySetupFeatureType):
(WebCore::PaymentInstallmentConfiguration::applePayInstallmentConfiguration const):
* Modules/applepay/PaymentInstallmentConfigurationWebCore.h:
* Modules/applepay/paymentrequest/ApplePayRequest.idl:
* testing/MockPaymentCoordinator.cpp:
(WebCore::MockPaymentCoordinator::showPaymentUI):
* testing/MockPaymentCoordinator.h:
* testing/MockPaymentCoordinator.idl:

Source/WebKit:

* Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:
(IPC::ArgumentCoder<ApplePaySessionPaymentRequest>::encode):
(IPC::ArgumentCoder<ApplePaySessionPaymentRequest>::decode):
(IPC::finishDecoding): Deleted.
(IPC::finishEncoding): Deleted.

LayoutTests:

* http/tests/ssl/applepay/ApplePayInstallmentConfiguration.https-expected.txt: Added.
* http/tests/ssl/applepay/ApplePayInstallmentConfiguration.https.html: Added.


Canonical link: https://commits.webkit.org/224877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261785 268f45cc-cd09-0410-ab3c-d52691b4dbfc